# DirkAiProject

./: README.md
NetWorkTest/: Stock.cpp
SnakeGame/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
StockApp/: CMakeLists.txt  chartmanager.cpp  chartmanager.h  fetch_a_stock_codes.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt  stock_data_manager.py  stockcodemap.cpp  stockcodemap.h  stockdatamanager.cpp  stockdatamanager.h  trading_strategy.py
线性回归/: main.cpp
